--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -16,8 +16,13 @@
     "@coffeekraken/s-config": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
+    "@coffeekraken/s-stdio": "^2.0.0",
+    "@coffeekraken/s-event-emitter": "^2.0.0",
     "@coffeekraken/s-sugar-json": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "@coffeekraken/s-env": "^2.0.0",
+    "@coffeekraken/s-process": "^2.0.0",
+    "@coffeekraken/s-promise": "^2.0.0",
     "enquirer": "^2.3.6"
   }
 }
