--- a/packages/core/s-stdio/package.json
+++ b/packages/core/s-stdio/package.json
@@ -16,6 +16,7 @@
     "@coffeekraken/s-log": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "enquirer": "^2.3.6",
     "inquirer": "^8.0.0",
     "minimatch": "^3.0.4",
     "stack-trace": "0.0.10",
