--- a/packages/core/s-theme/package.json
+++ b/packages/core/s-theme/package.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
+    "@coffeekraken/s-color": "^2.0.0",
     "@coffeekraken/s-sugar-json": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "micromatch": "^4.0.4"
   }
 }
