--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -20,6 +20,7 @@
     "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
     "@coffeekraken/s-code-example-component": "^2.0.0",
     "@coffeekraken/s-filtrable-input-component": "^2.0.0",
+    "@coffeekraken/s-config-explorer-component": "^2.0.0",
     "@coffeekraken/s-inline-svg-component": "^2.0.0",
     "@coffeekraken/s-request": "^2.0.0",
     "@coffeekraken/s-request-component": "^2.0.0",
