--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -91,6 +91,7 @@
     "micromatch": "^4.0.2",
     "minimatch": "^3.0.4",
     "mobile-detect": "^1.4.5",
+    "node-ipc-store": "^1.0.8",
     "object-encode": "^1.0.2",
     "open-graph-scraper": "^4.9.0",
     "ora": "^5.4.0",
@@ -103,6 +104,7 @@
     "strip-ansi": "^6.0.0",
     "strip-css-comments": "^4.1.0",
     "striptags": "^3.1.1",
+    "tcp-port-used": "^1.0.2",
     "temp-dir": "^2.0.0",
     "terminal-kit": "^1.44.0",
     "to-regex": "^3.0.2",
