--- a/packages/compilers/s-vite-plugin-sugar/package.json
+++ b/packages/compilers/s-vite-plugin-sugar/package.json
@@ -8,6 +8,7 @@
     "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
     "license": "MIT",
     "dependencies": {
+        "@coffeekraken/sugar": "^2.0.0",
         "@coffeekraken/s-env": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0"
     },
