--- a/packages/components/s-activate-component/package.json
+++ b/packages/components/s-activate-component/package.json
@@ -13,8 +13,9 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-component-utils": "^2.0.0",
-        "@coffeekraken/sugar": "^2.0.0"
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "lit": "^2.0.0-rc.3"
     }
 }
