--- a/packages/components/s-clipboard-copy-component/package.json
+++ b/packages/components/s-clipboard-copy-component/package.json
@@ -18,7 +18,6 @@
     "dependencies": {
         "@coffeekraken/s-component-utils": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "vue": "^3.1.4",
-        "vue3-webcomponent-wrapper": "^0.1.4"
+        "lit": "^2.0.0-rc.3"
     }
 }
