--- a/packages/components/s-color-picker-component/package.json
+++ b/packages/components/s-color-picker-component/package.json
@@ -17,6 +17,6 @@
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "@simonwep/pickr": "^1.8.1",
-        "lit-element": "^2.5.1"
+        "lit": "^2.0.0-rc.3"
     }
 }
