--- a/packages/components/s-date-picker-component/package.json
+++ b/packages/components/s-date-picker-component/package.json
@@ -18,8 +18,7 @@
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "@simonwep/pickr": "^1.8.1",
-        "lit-element": "^2.5.1",
-        "lit-html": "^1.4.1",
+        "lit": "^2.0.0-rc.3",
         "moment": "^2.29.1",
         "pikaday": "^1.8.2"
     }
