--- a/packages/components/s-range-component/package.json
+++ b/packages/components/s-range-component/package.json
@@ -16,7 +16,6 @@
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "lit-element": "^2.5.1",
-        "lit-html": "^1.4.1"
+        "lit": "^2.0.0-rc.3"
     }
 }
