--- a/packages/components/s-side-panel-component/package.json
+++ b/packages/components/s-side-panel-component/package.json
@@ -16,6 +16,6 @@
     "dependencies": {
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "lit-element": "^2.5.1"
+        "lit": "^2.0.0-rc.3"
     }
 }
