--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@coffeekraken/s-activate-component": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-activate-feature": "^2.0.0",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-code-example-component": "^2.0.0",
         "@coffeekraken/s-filtrable-input-component": "^2.0.0",
