--- a/packages/components/s-config-explorer/package.json
+++ b/packages/components/s-config-explorer/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-request": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
