--- a/packages/core/s-promise/package.json
+++ b/packages/core/s-promise/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@coffeekraken/s-promise",
-  "version": "2.0.0",
-  "description": "",
-  "type": "module",
-  "main": "./src/shared/exports.js",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-event-emitter": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
-  }
+    "name": "@coffeekraken/s-promise",
+    "version": "2.0.0",
+    "description": "",
+    "type": "module",
+    "main": "./src/shared/exports.js",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-event-emitter": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0"
+    }
 }
