--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "@coffeekraken/s-frontend-server",
-  "version": "2.0.0",
-  "description": "",
-  "type": "module",
-  "main": "./src/node/exports.js",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-bench": "^2.0.0",
-    "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-docblock": "^2.0.0",
-    "@coffeekraken/s-docblock-renderer": "^2.0.0",
-    "@coffeekraken/s-docmap": "^2.0.0",
-    "@coffeekraken/s-duration": "^2.0.0",
-    "@coffeekraken/s-markdown-builder": "^2.0.0",
-    "@coffeekraken/s-env": "^2.0.0",
-    "@coffeekraken/s-process": "^2.0.0",
-    "@coffeekraken/s-sugar-config": "^2.0.0",
-    "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/s-view-renderer": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "file-type": "^16.3.0",
-    "http-proxy-middleware": "^2.0.0",
-    "marked": "^2.1.3",
-    "mime-types": "^2.1.30",
-    "minimatch": "^3.0.4",
-    "sails": "^1.4.2",
-    "serve-static": "^1.14.1",
-    "vhost": "^3.0.2"
-  }
+    "name": "@coffeekraken/s-frontend-server",
+    "version": "2.0.0",
+    "description": "",
+    "type": "module",
+    "main": "./src/node/exports.js",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-bench": "^2.0.0",
+        "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-docblock": "^2.0.0",
+        "@coffeekraken/s-docblock-renderer": "^2.0.0",
+        "@coffeekraken/s-docmap": "^2.0.0",
+        "@coffeekraken/s-duration": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-markdown-builder": "^2.0.0",
+        "@coffeekraken/s-env": "^2.0.0",
+        "@coffeekraken/s-process": "^2.0.0",
+        "@coffeekraken/s-sugar-config": "^2.0.0",
+        "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/s-view-renderer": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "compression": "^1.7.4",
+        "express": "^4.17.1",
+        "file-type": "^16.3.0",
+        "http-proxy-middleware": "^2.0.0",
+        "marked": "^2.1.3",
+        "mime-types": "^2.1.30",
+        "minimatch": "^3.0.4",
+        "sails": "^1.4.2",
+        "serve-static": "^1.14.1",
+        "vhost": "^3.0.2"
+    }
 }
