--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -28,6 +28,7 @@
         "@coffeekraken/s-request-component": "^2.0.0",
         "@coffeekraken/s-color-picker-component": "^2.0.0",
         "@coffeekraken/s-side-panel-component": "^2.0.0",
+        "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "lit-element": "^2.5.1",
         "minisearch": "^3.0.4",
