--- a/packages/builders/s-postcss-builder/package.json
+++ b/packages/builders/s-postcss-builder/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "@coffeekraken/s-postcss-builder",
-  "version": "2.0.0",
-  "description": "",
-  "type": "module",
-  "main": "./src/node/exports.js",
-  "scripts": {},
-  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
-  "license": "MIT",
-  "dependencies": {
-    "@coffeekraken/s-builder": "^2.0.0",
-    "@coffeekraken/s-event-emitter": "^2.0.0",
-    "@coffeekraken/s-file": "^2.0.0",
-    "@coffeekraken/s-glob": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
-    "@coffeekraken/s-promise": "^2.0.0",
-    "@coffeekraken/s-sugar-config": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "autoprefixer": "^10.2.6",
-    "csso": "^4.2.0",
-    "postcss": "^8.3.5",
-    "postcss-atroot": "^0.2.3",
-    "postcss-extend-rule": "^3.0.0",
-    "postcss-import": "^14.0.2",
-    "postcss-nested": "^5.0.5",
-    "postcss-property-lookup": "^3.0.0",
-    "purgecss": "^4.0.3",
-    "shorter": "^0.3.1"
-  }
+    "name": "@coffeekraken/s-postcss-builder",
+    "version": "2.0.0",
+    "description": "",
+    "type": "module",
+    "main": "./src/node/exports.js",
+    "scripts": {},
+    "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
+    "license": "MIT",
+    "dependencies": {
+        "@coffeekraken/s-builder": "^2.0.0",
+        "@coffeekraken/s-event-emitter": "^2.0.0",
+        "@coffeekraken/s-file": "^2.0.0",
+        "@coffeekraken/s-glob": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
+        "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/s-sugar-config": "^2.0.0",
+        "@coffeekraken/sugar": "^2.0.0",
+        "@fullhuman/postcss-purgecss": "^4.0.3",
+        "autoprefixer": "^10.2.6",
+        "csso": "^4.2.0",
+        "postcss": "^8.3.5",
+        "postcss-atroot": "^0.2.3",
+        "postcss-extend-rule": "^3.0.0",
+        "postcss-import": "^14.0.2",
+        "postcss-nested": "^5.0.5",
+        "postcss-property-lookup": "^3.0.0",
+        "purgecss": "^4.0.3",
+        "shorter": "^0.3.1"
+    }
 }
