--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -16,6 +16,7 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-coffeekraken-theme": "^2.0.0",
         "@coffeekraken/s-activate-feature": "^2.0.0",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-code-example-component": "^2.0.0",
