--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -26,10 +26,10 @@
         "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-stdio": "^2.0.0",
-        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
@@ -116,6 +116,7 @@
         "to-regex": "^3.0.2",
         "unescape": "^1.0.1",
         "uniqid": "^5.2.0",
+        "unzipper": "^0.10.11",
         "url-parse": "^1.4.7",
         "url-slug": "^3.0.2",
         "uuid": "^8.3.2",
