--- a/packages/core/s-docblock/package.json
+++ b/packages/core/s-docblock/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "caniuse-api": "^3.0.0",
     "find-in-files": "^0.5.0",
+    "github-download-directory": "^2.0.0",
     "marked": "^3.0.4",
     "minimatch": "^3.0.4",
     "open-graph-scraper": "^4.9.0",
