--- a/packages/tools/s-color/package.json
+++ b/packages/tools/s-color/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "@csstools/convert-colors": "^2.0.0"
   }
 }
