--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -33,6 +33,7 @@
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
+        "@csstools/convert-colors": "^2.0.0",
         "@types/blessed": "^0.1.17",
         "abstract-syntax-tree": "^2.17.2",
         "acorn-loose": "^8.0.2",
@@ -50,6 +51,7 @@
         "clipboard-copy": "^4.0.1",
         "clipboardy": "^2.3.0",
         "clone-class": "^0.6.20",
+        "colors-convert": "^1.4.1",
         "console-clear": "^1.1.1",
         "copy-paste": "^1.3.0",
         "copy-to": "^2.0.1",
