--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -15,23 +15,24 @@
     "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
     "license": "MIT",
     "dependencies": {
-        "@coffeekraken/s-class": "^2.0.0",
-        "@coffeekraken/s-coffeekraken-theme": "^2.0.0",
         "@coffeekraken/s-activate-feature": "^2.0.0",
+        "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-code-example-component": "^2.0.0",
-        "@coffeekraken/s-filtrable-input-component": "^2.0.0",
+        "@coffeekraken/s-coffeekraken-theme": "^2.0.0",
+        "@coffeekraken/s-color-picker-component": "^2.0.0",
         "@coffeekraken/s-config-explorer-component": "^2.0.0",
         "@coffeekraken/s-date-picker-component": "^2.0.0",
-        "@coffeekraken/s-range-component": "^2.0.0",
-        "@coffeekraken/s-inline-svg-component": "^2.0.0",
-        "@coffeekraken/s-request": "^2.0.0",
+        "@coffeekraken/s-filtrable-input-component": "^2.0.0",
         "@coffeekraken/s-form-validate-feature": "^2.0.0",
-        "@coffeekraken/s-request-component": "^2.0.0",
-        "@coffeekraken/s-color-picker-component": "^2.0.0",
-        "@coffeekraken/s-side-panel-component": "^2.0.0",
+        "@coffeekraken/s-inline-svg-component": "^2.0.0",
         "@coffeekraken/s-lit-component": "^2.0.0",
+        "@coffeekraken/s-range-component": "^2.0.0",
+        "@coffeekraken/s-request": "^2.0.0",
+        "@coffeekraken/s-request-component": "^2.0.0",
+        "@coffeekraken/s-side-panel-component": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
+        "animejs": "^3.2.1",
         "lit-element": "^2.5.1",
         "minisearch": "^3.0.4",
         "vue": "^3.1.5",
