--- a/packages/components/s-code-example-component/package.json
+++ b/packages/components/s-code-example-component/package.json
@@ -20,6 +20,7 @@
         "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "highlight.js": "^11.1.0",
-        "lit": "^2.0.0-rc.3"
+        "lit": "^2.0.0-rc.3",
+        "prettier": "^2.4.1"
     }
 }
