--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "We are a young collectve of front-end creative developers with one goal in mind. Build tools to make every team working day life better",
     "scripts": {
-        "dev": "tsc --watch",
+        "dev": "tsc --watch & jest --watch",
         "container": "docker exec --workdir /workspaces/coffeekraken -it coffeekraken /bin/bash"
     },
     "private": true,
@@ -35,6 +35,8 @@
     "homepage": "https://github.com/Coffeekraken/coffeekraken#readme",
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "browserslist": "^4.17.5",
+        "concurrently": "^6.3.0",
         "dependency-check": "^4.1.0",
         "esm": "^3.2.25",
         "jest-esm-transformer": "^1.0.0",
