--- a/packages/config/s-sugar-config/package.json
+++ b/packages/config/s-sugar-config/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-config": "^2.0.0",
+        "@coffeekraken/s-docblock": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0"
     }
 }
