--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -12,6 +12,7 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-docblock": "^2.0.0",
         "@coffeekraken/s-docblock-renderer": "^2.0.0",
+        "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-docmap": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
