--- a/packages/builders/s-postcss-builder/package.json
+++ b/packages/builders/s-postcss-builder/package.json
@@ -12,8 +12,8 @@
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
-        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
+        "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
@@ -23,6 +23,7 @@
         "csso": "^4.2.0",
         "postcss": "^8.3.5",
         "postcss-atroot": "^0.2.3",
+        "postcss-easy-import": "^3.0.0",
         "postcss-extend-rule": "^3.0.0",
         "postcss-import": "^14.0.2",
         "postcss-nested": "^5.0.5",
