--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -29,6 +29,7 @@
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/cli": "^2.0.0",
         "@coffeekraken/s-stdio": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
