--- a/packages/tools/s-component-utils/package.json
+++ b/packages/tools/s-component-utils/package.json
@@ -14,6 +14,7 @@
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
+        "@coffeekraken/s-conductor": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0"
     }
 }
