--- a/packages/builders/s-images-builder/package.json
+++ b/packages/builders/s-images-builder/package.json
@@ -18,6 +18,7 @@
     "@coffeekraken/s-process": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
+    "@coffeekraken/s-duration": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
     "image-size": "^1.0.0",
     "sharp": "^0.29.3"
