--- a/packages/core/s-process/package.json
+++ b/packages/core/s-process/package.json
@@ -14,6 +14,7 @@
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/s-stdio": "^2.0.0",
+    "@coffeekraken/s-log": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
     "stack-trace": "0.0.10"
   }
