--- a/packages/components/s-code-example-component/package.json
+++ b/packages/components/s-code-example-component/package.json
@@ -19,7 +19,10 @@
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
+        "@prettier/plugin-php": "^0.17.6",
         "highlight.js": "^11.1.0",
+        "html-tags": "^3.1.0",
+        "known-css-properties": "^0.24.0",
         "lit": "^2.0.0-rc.3",
         "prettier": "^2.4.1"
     }
