--- a/packages/themes/s-theme/package.json
+++ b/packages/themes/s-theme/package.json
@@ -12,6 +12,7 @@
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-color": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
+        "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
         "known-css-properties": "^0.23.0",
         "micromatch": "^4.0.4",
