--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -17,15 +17,18 @@
         "test": "jest --silent"
     },
     "dependencies": {
+        "@coffeekraken/s-bench": "^2.0.0",
         "@coffeekraken/cli": "^2.0.0",
         "@coffeekraken/s-cache": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-color": "^2.0.0",
         "@coffeekraken/s-config": "^2.0.0",
+        "@coffeekraken/s-conductor": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
+        "@coffeekraken/s-component-utils": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
@@ -33,6 +36,7 @@
         "@coffeekraken/s-stdio": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
+        "@coffeekraken/s-vite": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
         "@csstools/convert-colors": "^2.0.0",
         "@types/blessed": "^0.1.17",
