--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@coffeekraken/cli": "^2.0.0",
         "@coffeekraken/s-activate-feature": "^2.0.0",
+        "@coffeekraken/s-sitemap-builder": "^2.0.0",
         "@coffeekraken/s-bench": "^2.0.0",
         "@coffeekraken/s-builder": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0",
