--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -17,18 +17,19 @@
         "test": "jest --silent"
     },
     "dependencies": {
-        "@coffeekraken/s-bench": "^2.0.0",
         "@coffeekraken/cli": "^2.0.0",
+        "@coffeekraken/s-bench": "^2.0.0",
         "@coffeekraken/s-cache": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-color": "^2.0.0",
-        "@coffeekraken/s-config": "^2.0.0",
+        "@coffeekraken/s-component-utils": "^2.0.0",
         "@coffeekraken/s-conductor": "^2.0.0",
+        "@coffeekraken/s-config": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-file": "^2.0.0",
+        "@coffeekraken/s-sugar-element": "^2.0.0",
         "@coffeekraken/s-glob": "^2.0.0",
-        "@coffeekraken/s-component-utils": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
@@ -36,8 +37,8 @@
         "@coffeekraken/s-stdio": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
-        "@coffeekraken/s-vite": "^2.0.0",
         "@coffeekraken/s-view-renderer": "^2.0.0",
+        "@coffeekraken/s-vite": "^2.0.0",
         "@csstools/convert-colors": "^2.0.0",
         "@types/blessed": "^0.1.17",
         "abstract-syntax-tree": "^2.17.2",
@@ -91,7 +92,7 @@
         "in-viewport": "^3.6.0",
         "inline-style-prefixer": "^6.0.0",
         "ip": "^1.1.5",
-        "is-class": "0.0.9",
+        "is-class": "^0.0.9",
         "is-equal": "^1.6.1",
         "is-glob": "^4.0.1",
         "is-plain-object": "^5.0.0",
@@ -125,7 +126,7 @@
         "temp-dir": "^2.0.0",
         "terminal-kit": "^1.44.0",
         "to-regex": "^3.0.2",
-        "transformation-matrix": "^2.9.0",
+        "transformation-matrix": "^2.11.1",
         "unescape": "^1.0.1",
         "uniqid": "^5.2.0",
         "unzipper": "^0.10.11",
