--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -19,31 +19,27 @@
     "dependencies": {
         "@coffeekraken/cli": "^2.0.0",
         "@coffeekraken/s-activate-feature": "^2.0.0",
-        "@coffeekraken/s-sitemap-builder": "^2.0.0",
         "@coffeekraken/s-bench": "^2.0.0",
         "@coffeekraken/s-builder": "^2.0.0",
         "@coffeekraken/s-class": "^2.0.0",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0",
         "@coffeekraken/s-code-example-component": "^2.0.0",
-        "@coffeekraken/s-floating-feature": "^2.0.0",
-        "@coffeekraken/s-page-transition-feature": "^2.0.0",
-        "@coffeekraken/s-refocus-feature": "^2.0.0",
         "@coffeekraken/s-color": "^2.0.0",
         "@coffeekraken/s-color-picker-component": "^2.0.0",
         "@coffeekraken/s-component-utils": "^2.0.0",
+        "@coffeekraken/s-conductor": "^2.0.0",
         "@coffeekraken/s-config": "^2.0.0",
         "@coffeekraken/s-date-picker-component": "^2.0.0",
         "@coffeekraken/s-descriptor": "^2.0.0",
         "@coffeekraken/s-docblock": "^2.0.0",
         "@coffeekraken/s-docmap": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
-        "@coffeekraken/s-sugar-feature": "^2.0.0",
-        "@coffeekraken/s-conductor": "^2.0.0",
         "@coffeekraken/s-env": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-feature": "^2.0.0",
         "@coffeekraken/s-file": "^2.0.0",
         "@coffeekraken/s-filtrable-input-component": "^2.0.0",
+        "@coffeekraken/s-floating-feature": "^2.0.0",
         "@coffeekraken/s-form-validate-feature": "^2.0.0",
         "@coffeekraken/s-frontend-server": "^2.0.0",
         "@coffeekraken/s-frontspec": "^2.0.0",
@@ -55,17 +51,22 @@
         "@coffeekraken/s-lit-component": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-markdown-builder": "^2.0.0",
+        "@coffeekraken/s-page-transition-feature": "^2.0.0",
         "@coffeekraken/s-parallax-feature": "^2.0.0",
         "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-range-component": "^2.0.0",
+        "@coffeekraken/s-refocus-feature": "^2.0.0",
         "@coffeekraken/s-request": "^2.0.0",
         "@coffeekraken/s-riotjs-plugin-postcss-preprocessor": "^2.0.0",
         "@coffeekraken/s-side-panel-component": "^2.0.0",
+        "@coffeekraken/s-sitemap-builder": "^2.0.0",
+        "@coffeekraken/s-slider-component": "^2.0.0",
         "@coffeekraken/s-static-builder": "^2.0.0",
         "@coffeekraken/s-stdio": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
+        "@coffeekraken/s-sugar-feature": "^2.0.0",
         "@coffeekraken/s-sugar-json": "^2.0.0",
         "@coffeekraken/s-theme": "^2.0.0",
         "@coffeekraken/s-timer": "^2.0.0",
@@ -85,6 +86,7 @@
         "postprocessing": "^6.23.2",
         "three": "^0.134.0",
         "tumult": "^3.0.14",
+        "vite": "^2.8.6",
         "vue": "^3.1.5",
         "vue3-webcomponent-wrapper": "^0.1.4"
     },
