--- a/packages/core/s-docblock/package.json
+++ b/packages/core/s-docblock/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
+    "@coffeekraken/s-promise": "^2.0.0",
+    "@coffeekraken/s-log": "^2.0.0",
     "caniuse-api": "^3.0.0",
     "find-in-files": "^0.5.0",
     "github-download-directory": "^2.0.0",
