--- a/packages/core/s-promise/package.json
+++ b/packages/core/s-promise/package.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-event-emitter": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0"
