--- a/packages/builders/s-postcss-builder/package.json
+++ b/packages/builders/s-postcss-builder/package.json
@@ -12,7 +12,7 @@
     "@coffeekraken/s-glob": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-log": "^2.0.0",
-    "postcss-sugar-plugin": "^2.0.0",
+    "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
