--- a/packages/websites/coffeekraken-io/package.json
+++ b/packages/websites/coffeekraken-io/package.json
@@ -53,7 +53,7 @@
         "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-page-transition-feature": "^2.0.0",
         "@coffeekraken/s-parallax-feature": "^2.0.0",
-        "postcss-sugar-plugin": "^2.0.0",
+        "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
         "@coffeekraken/s-promise": "^2.0.0",
         "@coffeekraken/s-range-component": "^2.0.0",
