--- a/packages/compilers/s-postcss-sugar-plugin/package.json
+++ b/packages/compilers/s-postcss-sugar-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postcss-sugar-plugin",
+  "name": "@coffeekraken/s-postcss-sugar-plugin",
   "version": "2.0.0",
   "description": "",
   "scripts": {},
