--- a/packages/tools/s-vite/package.json
+++ b/packages/tools/s-vite/package.json
@@ -14,7 +14,7 @@
     "@coffeekraken/s-file": "^2.0.0",
     "@coffeekraken/s-promise": "^2.0.0",
     "@coffeekraken/s-event-emitter": "^2.0.0",
-    "postcss-sugar-plugin": "^2.0.0",
+    "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0",
     "@coffeekraken/s-riotjs-plugin-postcss-preprocessor": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/s-vite-plugin-postcss": "^2.0.0",
