--- a/packages/builders/s-typescript-builder/package.json
+++ b/packages/builders/s-typescript-builder/package.json
@@ -20,6 +20,7 @@
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/s-sugar-config": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
-        "chokidar": "^3.5.3"
+        "chokidar": "^3.5.3",
+        "typescript": "^4.6.3"
     }
 }
