--- a/packages/core/s-monorepo/package.json
+++ b/packages/core/s-monorepo/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0",
+        "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-interface": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
         "@coffeekraken/sugar": "^2.0.0",
