--- a/packages/renderers/s-view-renderer-engine-blade/composer.json
+++ b/packages/renderers/s-view-renderer-engine-blade/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "@coffeekraken/s-view-renderer-engine-blade",
+    "name": "coffeekraken/s-view-renderer-engine-blade",
     "require": {
         "eftec/bladeone": "^4.5"
     },
