--- a/packages/builders/s-typescript-builder/package.json
+++ b/packages/builders/s-typescript-builder/package.json
@@ -10,6 +10,7 @@
     "@coffeekraken/s-glob": "^2.0.0",
     "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-log": "^2.0.0",
+    "@coffeekraken/s-monorepo": "^2.0.0",
     "@coffeekraken/s-sugar-config": "^2.0.0",
     "@coffeekraken/sugar": "^2.0.0",
     "chokidar": "^3.5.3",
