--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -19,6 +19,7 @@
         "@coffeekraken/s-docmap": "^2.0.0",
         "@coffeekraken/s-duration": "^2.0.0",
         "@coffeekraken/s-log": "^2.0.0",
+        "@coffeekraken/s-glob": "^2.0.0",
         "@coffeekraken/s-markdown-builder": "^2.0.0",
         "@coffeekraken/s-env": "^2.0.0",
         "@coffeekraken/s-process": "^2.0.0",
