--- a/packages/tools/s-glob/package.json
+++ b/packages/tools/s-glob/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/s-class": "^2.0.0",
-    "@coffeekraken/s-interface": "^2.0.0",
     "@coffeekraken/s-file": "^2.0.0",
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/s-interface": "^2.0.0",
+    "@coffeekraken/sugar": "^2.0.0",
+    "micromatch": "^4.0.5"
   },
   "main": "dist/pkg/cjs/node/exports.js",
   "module": "dist/pkg/esm/node/exports.js",
